--- a/ModularRiftPlugin.uplugin
+++ b/ModularRiftPlugin.uplugin
@@ -1,20 +1,24 @@
 {
-	"FileVersion" : 3,
-	"Version" : 1,
-	"VersionName" : "1.0",
-	"FriendlyName" : "Modular Rift Plugin",
-	"Description" : "Creates and manages modular sets",
-	"Category" : "Editor",
-	"CreatedBy" : "PipeRift",
-	"CreatedByURL" : "http://piperift.com/",
-	"EnabledByDefault" : true,
-	"CanContainContent" : true,
-	"IsBetaVersion" : true,
-	"Modules" :
-	[
+	"FileVersion": 3,
+	"Version": 1,
+	"VersionName": "1.0",
+	"FriendlyName": "Modular Rift Plugin",
+	"Description": "Creates and manages modular sets.",
+	"Category": "Editor",
+	"CreatedBy": "PipeRift",
+	"CreatedByURL": "http://piperift.com/",
+	"DocsURL": "",
+	"MarketplaceURL": "",
+	"SupportURL": "",
+	"EnabledByDefault": true,
+	"CanContainContent": true,
+	"IsBetaVersion": true,
+	"Installed": false,
+	"Modules": [
 		{
-			"Name" : "ModularRiftPlugin",
-            "Type" : "Developer"
+			"Name": "ModularRiftPlugin",
+			"Type": "Developer",
+			"LoadingPhase": "Default"
 		}
 	]
 }
